# rag-bot

./: main.py  pyproject.toml
docs/: eaa_application.txt
